# Sequential

./: .gitignore  main.py  pyproject.toml  requirements.txt  train.py
data/: lhotse_recipes_datamodule.py
models/asr/dummy/configs/: aishell.yaml  ds_config.1e-2.json  ds_config.json  mini_librispeech.yaml  timit.yaml  train.yaml  train_multi_npu.yaml  train_multi_npu_deepspeed.yaml  train_multi_npu_multi_node.yaml  train_multi_npu_multi_node_deepspeed.yaml  train_npu.yaml  train_npu_bucket_sampler.yaml  train_timit.yaml
models/asr/dummy/models/: dnn.py  dnn_manual.py
models/asr/fireredasr/: speech2text.py
models/asr/fireredasr/conf/: train.yaml
models/asr/fireredasr/configs/: train_multi_npu.yaml  train_multi_npu_deepspeed.yaml  train_npu.yaml  train_npu_tiny.yaml
models/asr/fireredasr/data/: asr_feat.py
models/asr/fireredasr/models/: fireredasr.py  fireredasr_aed.py  fireredasr_llm.py
models/asr/fireredasr/tokenizer/: aed_tokenizer.py  llm_tokenizer.py
sequential/data/: audio_backend.py  create_lhotse_manifests.py  dataloader.py  dataset.py  lhotse_datamodule.py  lhotse_recipes_datamodule.py  sampler.py
sequential/utils/: builder.py  dist.py
test/: egs.yaml  test_parser.py
