[project]
name = "sequential"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cn2an>=0.5.23",
    "jsonargparse[signatures]>=4.38.0",
    "kaldi-io>=0.9.8",
    "kaldi-native-fbank>=1.15",
    "kaldiio>=2.18.0",
    "lhotse>=1.31.0",
    "lightning>=2.5.1",
    "numpy>=1.26.1",
    "peft>=0.13.2",
    "sentencepiece>=0.2.0",
    "torch>=2.0.0,<=2.1.0",
    "torchaudio>=2.1.0",
    "transformers>=4.46.3",
]
